[gd_scene load_steps=13 format=3 uid="uid://dxcqfix6rnkvj"]

[ext_resource type="Script" path="res://scripts/MainMenuButtons.gd" id="1_pjs4p"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_pse80"]
[ext_resource type="PackedScene" uid="uid://i0sfj7yfh75v" path="res://scenes/Karnaugh/Level1.tscn" id="2_8acm1"]
[ext_resource type="FontFile" uid="uid://c7r7x7h6jh0uq" path="res://assets/fonts/kenvector_future.ttf" id="3_yvl55"]

[sub_resource type="Gradient" id="Gradient_sqvfn"]
colors = PackedColorArray(0.489218, 0.577116, 0.814937, 1, 0.863987, 0.865142, 0.950427, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8lsmn"]
gradient = SubResource("Gradient_sqvfn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hecy"]
bg_color = Color(0.513726, 0.596078, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r44fm"]
bg_color = Color(0.329412, 0.572549, 0.945098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sflf4"]
bg_color = Color(0.513726, 0.596078, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grap1"]
bg_color = Color(0.329412, 0.572549, 0.945098, 1)
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38l4c"]
bg_color = Color(0.513726, 0.596078, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_domrf"]
bg_color = Color(0.329412, 0.572549, 0.945098, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pse80")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_8lsmn")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = -70.0
offset_right = 1327.0
offset_bottom = 190.0
color = Color(0.835294, 0.85098, 0.937255, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -1221.0
offset_top = -715.0
offset_right = -298.0
offset_bottom = -108.0
color = Color(0.505882, 0.592157, 0.819608, 1)

[node name="ColorRect3" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -457.0
offset_top = 141.0
offset_right = -218.0
offset_bottom = 629.0
color = Color(0.588235, 0.654902, 0.85098, 1)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -25.0
offset_right = 208.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
script = ExtResource("1_pjs4p")
sceneToLoad = ExtResource("2_8acm1")

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yvl55")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_7hecy")
theme_override_styles/hover = SubResource("StyleBoxFlat_r44fm")
text = "Play
"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yvl55")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_sflf4")
theme_override_styles/hover = SubResource("StyleBoxFlat_grap1")
text = "Settings
"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yvl55")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_38l4c")
theme_override_styles/hover = SubResource("StyleBoxFlat_domrf")
text = "Exit
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.5
offset_top = -185.5
offset_right = 323.5
offset_bottom = -116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_yvl55")
theme_override_font_sizes/normal_font_size = 60
text = "Digital Circuits"

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="pressed" from="Buttons/PlayButton" to="Buttons" method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="Buttons" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="Buttons" method="_on_exit_button_pressed"]
